# Cloverwatch

./: CMakeLists.txt  README.md  app.overlay  cli_config.h  cli_setup.h  main.cpp  pattern_setup.h  prj.conf  serial_setup.h  system_config.h
CLI/: CMakeLists.txt
CLI/include/: cli.h
CLI/src/: cli.cpp
Config/: cli_config.h  object_init.cpp  system_config.h
Desktop_Interface/: UART.py  format.py  requirements.txt
Desktop_Interface/config/: format.json
ErrorCorrection/include/: reed_soloman.h  viterbi.h
Logger/: CMakeLists.txt  logger_config.h
Logger/include/: cli_funcs.h  logger.h
Logger/src/: cli_funcs.cpp  logger.cpp
PatternMatcher/: CMakeLists.txt
PatternMatcher/compile_time_init/: pattern_config.h  pattern_template_config.cpp  regex_config.h
PatternMatcher/include/: cli_funcs.h  pattern.h  pattern_stats.h  regex.h
PatternMatcher/src/: cli_funcs.cpp  pattern.cpp  pattern_stats.cpp  regex.cpp  stat_request.cpp
Serial_IO/: CMakeLists.txt
Serial_IO/compile_time_init/: serial_template_config.cpp
Serial_IO/include/: serial_io.h
Serial_IO/src/: serial_io.cpp
TaskManager/: CMakeLists.txt
TaskManager/include/: task_manager.h
TaskManager/src/: task_manager.cpp
TesterDevice/: CMakeLists.txt  config.yaml  crc.h  tester_funcs.cpp  tester_funcs.hpp
TesterDevice/device/: cli.py  device_test_commands.py  lib_config.py  packetiser.py  serial_comm.py
Validator/: CMakeLists.txt
Validator/include/: crc.h  reed_soloman.h  simple_packetiser.h  validator.h  viterbi.h
Validator/libs/ssf_ecc/: ssfport.c  ssfport.h
Validator/src/: reed_soloman.cpp  simple_packetiser.tpp  validator.cpp  viterbi.cpp
data_structures/: CMakeLists.txt
data_structures/include/: c_heap_string.h  c_heap_vec.h  c_linked_deque.h  c_mutex.h  c_queue.h  c_string.h  c_types.h  circular_count.h  mem_pool.h  module_ids.h  ptr_types.h  time.h
data_structures/src/: c_linked_deque.tpp  c_queue.cpp  c_queue.tpp
